--- a/xform.yml
+++ b/xform.yml
@@ -9,15 +9,34 @@ terms_of_use: # TODO
 # Note that source_organization, source_url, and terms_of_use can be overridden
 #   for each output by providing those fields in the output entries.
 outputs:
-  -
-    description: # TODO
-    type: # TODO: currently there are only schemas for type: casecounts
-    file: # TODO: provide local path to output csv file: output/[file].csv
-    admin_level: # TODO: one of 0, 1, 2, global, continents, who_regions
-    schema: #TODO: local path or URL pointing to schema (see https://github.com/covid-open-data/data-registry)
-  -
-    description: # TODO
-    type: # TODO: currently there are only schemas for type: casecounts
-    file: # TODO: provide local path to output csv file: output/[file].csv
-    admin_level: # TODO: one of 0, 1, 2, global, continents, who_regions
-    schema: #TODO: local path or URL pointing to schema (see https://github.com/covid-open-data/data-registry)
+  - description:
+    type: case-counts
+    file: output/admin0.csv
+    admin_level: 0
+    schema: https://raw.githubusercontent.com/covid-open-data/data-registry/master/schemas/case-counts/admin0/v1/admin0.json
+  - description:
+    type: case-counts
+    file: output/admin1.csv
+    admin_level: 1
+    schema: https://raw.githubusercontent.com/covid-open-data/data-registry/master/schemas/case-counts/admin1/v1/admin1.json
+  - description:
+    type: case-counts
+    file: output/admin2.csv
+    admin_level: 2
+    schema: https://raw.githubusercontent.com/covid-open-data/data-registry/master/schemas/case-counts/admin2/v1/admin2.json
+  - description:
+    type: case-counts
+    file: output/continents.csv
+    admin_level: continents
+    schema: https://raw.githubusercontent.com/covid-open-data/data-registry/master/schemas/case-counts/continents/v1/continents.json
+  - description:
+    type: case-counts
+    file: output/global.csv
+    admin_level: global
+    schema: https://raw.githubusercontent.com/covid-open-data/data-registry/master/schemas/case-counts/global/v1/global.json
+  - description:
+    type: case-counts
+    file: output/who_regions.csv
+    admin_level: who_regions
+    schema: https://raw.githubusercontent.com/covid-open-data/data-registry/master/schemas/case-counts/who_regions/v1/who_regions.json
+
