--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,9 @@
-# TODO: Uncomment this to activate scheduling of this workflow.
-#on:
-#  schedule:
-#  - cron: "0 * * * *"
+# Run every day at 2am Pacific
+on:
+  watch:
+    types: [started]
+  schedule:
+    - cron: "* 9 * * *"
 
 jobs:
   run-xform:
@@ -14,5 +16,18 @@ jobs:
         uses: ./.github/actions/run-xform
         with:
           xform-command: '${GITHUB_WORKSPACE}/src/xform.sh'
+      - name: Validate CSV Files
+        uses: ./.github/actions/validate-csv
       - name: Git Push
         uses: ./.github/actions/git-push
+      - name: Failure Notification
+        if: failure()
+        run: |
+          curl --request POST \
+          --url https://api.github.com/repos/${{ github.repository }}/issues \
+          --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+          --header 'content-type: application/json' \
+          --data '{
+            "title": "GitHub Action FAILED",
+            "body": "This is an automated issue. See repo actions for details."
+            }'
